mash: Fix DCHECK when clicking on window close box

There is no pointer event equivalent for mouse event type MOUSE_CAPTURE_CHANGED
and MoveEventHandler doesn't need to deal with this event type.

https://codereview.chromium.org/1814533002/ caused a change in mouse event
handling that caused this DCHECK to be hit.

BUG=598330
TEST=mojo_runner mojo:mash_session and click the close box for any window

Review URL: https://codereview.chromium.org/1843433002

Cr-Commit-Position: refs/heads/master@{#383858}

Former-commit-id: 5e8057486c37f23bfdbd1febb5fa24d36e48f19d